refatorando codigo filtro

--- a/Integral/Calcular Area.ipynb
+++ b/Integral/Calcular Area.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
     }
    ],
    "source": [
-    "n = 1\n",
+    "interacoes = 1\n",
     "limite_Inf = 0\n",
     "limite_Sup = math.pi\n",
     "erro = 0.000001\n",
@@ -89,15 +89,22 @@
     "aproximador = SomaTrapeziosAberto #SomaTrapezios #SomaHimma\n",
     "\n",
     "valor_anterior = 0\n",
-    "valor_atual = aproximador(funcao, limite_Inf, limite_Sup, n)\n",
+    "valor_atual = aproximador(funcao, limite_Inf, limite_Sup, interacoes)\n",
     "\n",
     "while abs(valor_atual - valor_anterior) > erro :\n",
-    "    n += 1\n",
+    "    interacoes += 1\n",
     "    valor_anterior = valor_atual\n",
-    "    valor_atual = aproximador(funcao, limite_Inf, limite_Sup, n)\n",
+    "    valor_atual = aproximador(funcao, limite_Inf, limite_Sup, interacoes)\n",
     "print(valor_atual)\n",
-    "print(n)"
+    "print(interacoes)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
