--- a/Integral/aproximacao polinomial.ipynb
+++ b/Integral/aproximacao polinomial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,6 +58,42 @@
     "    r3 = pontos[3] * ((2*s) -(3*s*s) + (s*s*s))/6\n",
     "    return r0 + r1 + r2 + r3\n",
     "def grau4(pontos, s):\n",
+    "    s1 = s\n",
+    "    s2 = s*s\n",
+    "    s3 = s*s*s\n",
+    "    s4 = s*s*s*s\n",
+    "    \n",
+    "    r0 = pontos[0] *((24) -(50*s1) +(35*s2) -(10*s3) + (s4))/24\n",
+    "    r1 = pontos[0] *((168*s1) -(164*s2) +(48*s3) -(4*s4))/48\n",
+    "    r2 = pontos[0] *((-108*s1) +(162*s2) -(60*s3) +(6*s4))/48\n",
+    "    r3 = pontos[0] *((72*s1) -(116*s2) +(48*s3) -(4*s4))/144\n",
+    "    r4 = pontos[0] *(-(6*s1) +(11*s2) -(6*s3) +(s4))/24\n",
+    "    \n",
+    "    return r0 + r1 + r2 + r3 + r4\n",
+    "    \n",
+    "    soma = (s4 -6*s3 + 11*s2 -6*s1)/24\n",
+    "    #soma *= pontos[4] -3*pontos[3] + 6*pontos[2] -4*pontos[1] +pontos[0]\n",
+    "    v1 = pontos[4] -4*pontos[3] + 6*pontos[2] -4*pontos[1] +pontos[0]\n",
+    "    v2 = derivar(pontos, 4, 0)\n",
+    "    print(\"\\t\\t{} == {}\".format(v1, v2, (valor1==valor2)))\n",
+    "    \n",
+    "    soma *= derivar(pontos, 4, 0)\n",
+    "    return grau3(pontos, s) + soma\n",
+    "\n",
+    "    r0 = pontos[0] *(24 -50*s1 +35*s2 -10*s3 + s4)/24\n",
+    "    r1 = pontos[0] *(96*s1 -104*s2 +36*s3 -4*s4)/24\n",
+    "    r2 = pontos[0] *(-72*s1 +114*s2 -28*s3 +6*s4)/24\n",
+    "    r3 = pontos[0] *(26*s1 -25*s2 +22*s3 -3*s4 )/24\n",
+    "    r4 = pontos[0] *(-6*s1 +11*s2 -6*s3 +s4)/24\n",
+    "    return r0 + r1 + r2 + r3 + r4\n",
+    "\n",
+    "    t1 = derivar(pontos, 0, r=0)\n",
+    "    t2 = derivar(pontos, 1, r=0) * (s)\n",
+    "    t3 = derivar(pontos, 2, r=0) * (s) * (s-1)\n",
+    "    t4 = derivar(pontos, 3, r=0) * (s) * (s-1) * (s-2)\n",
+    "    t5 = derivar(pontos, 4, r=0) * (s) * (s-1) * (s-2) * (s-3)\n",
+    "    return t1 + t2 + t3 + t4 + t5\n",
+    "    \n",
     "    r0 = pontos[0] * (1 +(11*s/24) +(11*s*s/16) -(5*s*s*s/24) +(3*s*s*s*s/48))\n",
     "    r1 = pontos[1] * ((9*s/2) -(21*s*s/4) +(2*s*s*s) -(s*s*s*s/4))\n",
     "    r2 = pontos[2] * (-(15*s/4) +(49*s*s/8) -(11*s*s*s/4) +(3*s*s*s*s/8))\n",
@@ -68,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -84,47 +120,47 @@
       "2.0 == 2 = True\n",
       "2.0 == 2.0 = True\n",
       "2.0 == 2.0 = True\n",
-      "2.0 == 4.0 = False\n",
+      "2.0 == 1.0 = False\n",
       "interacao 2 ----------\n",
       "3.0 == 3 = True\n",
       "3.0 == 3.0 = True\n",
       "3.0 == 3.0 = True\n",
-      "3.0 == 6.999999999999999 = False\n",
+      "3.0 == 1.0 = False\n",
       "interacao 3 ----------\n",
       "4.0 == 4 = True\n",
       "4.0 == 4.0 = True\n",
       "4.0 == 4.0 = True\n",
-      "4.0 == 12.0 = False\n",
+      "4.0 == 1.0 = False\n",
       "interacao 4 ----------\n",
       "5.0 == 5 = True\n",
       "5.0 == 5.0 = True\n",
       "5.0 == 5.000000000000002 = False\n",
-      "5.0 == 21.00000000000003 = False\n",
+      "5.0 == 3.3333333333333335 = False\n",
       "interacao 5 ----------\n",
       "6.0 == 6 = True\n",
       "6.0 == 6.0 = True\n",
       "6.0 == 6.0 = True\n",
-      "6.0 == 36.0 = False\n",
+      "6.0 == 12.666666666666668 = False\n",
       "interacao 6 ----------\n",
       "7.0 == 7 = True\n",
       "7.0 == 7.0 = True\n",
       "7.0 == 7.0 = True\n",
-      "7.0 == 59.0 = False\n",
+      "7.0 == 36.0 = False\n",
       "interacao 7 ----------\n",
       "8.0 == 8 = True\n",
       "8.0 == 8.0 = True\n",
       "8.0 == 8.0 = True\n",
-      "8.0 == 92.0 = False\n",
+      "8.0 == 82.66666666666666 = False\n",
       "interacao 8 ----------\n",
       "9.0 == 9 = True\n",
       "9.0 == 9.0 = True\n",
       "9.0 == 9.0 = True\n",
-      "9.0 == 137.0 = False\n",
+      "9.0 == 164.33333333333331 = False\n",
       "interacao 9 ----------\n",
       "10.0 == 10 = True\n",
       "10.0 == 10.0 = True\n",
       "10.0 == 10.0 = True\n",
-      "10.0 == 196.0 = False\n"
+      "10.0 == 295.0 = False\n"
      ]
     }
    ],
