erro no calculo do pol de grau 1 corrigido

--- a/Integral/implementacao newton cotes.ipynb
+++ b/Integral/implementacao newton cotes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def h_fechado(limite_inferior, limite_superior, grau_polinomio):\n",
-    "    h = (limite_superior-limite_inferior)/(grau_polinomio+1)\n",
+    "    h = (limite_superior-limite_inferior)/(grau_polinomio)\n",
     "    #print(h)\n",
     "    pontos = []\n",
     "    for i in range(grau_polinomio+1):\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
     "    if(fechado):\n",
     "        if (grau == 1):\n",
     "            pesos = [1,1] \n",
-    "            divisor = 3\n",
+    "            divisor = 2\n",
     "            multiplicador = 1\n",
     "        \n",
     "        if (grau == 2):\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,27 +109,27 @@
     "\n",
     "    valor_anterior = aproximador(funcao, limite_Inf, limite_Sup, 0,grau, fechado)\n",
     "    valor_atual = aproximador(funcao, limite_Inf, limite_Sup, 1,grau, fechado)\n",
-    "    interacoes = 1\n",
+    "    iteracoes = 1\n",
     "    while( abs(valor_anterior - valor_atual) > erro):\n",
-    "        abs(valor_anterior - valor_atual)\n",
-    "        interacoes+=1\n",
+    "        iteracoes+=1\n",
     "        valor_anterior = valor_atual\n",
-    "        valor_atual = aproximador(funcao, limite_Inf, limite_Sup, interacoes, grau,fechado)\n",
-    "\n",
-    "    print(\"qtd particoes 2^{}\\nvalor aproximacao = {}\".format(interacoes, valor_atual))"
+    "        valor_atual = aproximador(funcao, limite_Inf, limite_Sup, iteracoes, grau,fechado)\n",
+    "    \n",
+    "    return (iteracoes, valor_atual)\n",
+    "   # print(\"qtd particoes 2^{}\\nvalor aproximacao = {}\".format(iteracoes, valor_atual))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "qtd particoes 2^23\n",
-      "valor aproximacao = 5.958822825949187\n"
+      "qtd particoes 2^3\n",
+      "valor aproximacao = 17.876470347803945\n"
      ]
     }
    ],
@@ -137,25 +137,63 @@
     "def funcao(x):\n",
     "    return ( math.sin(2*x) + (4*x*x) + ((3*x)) )**2\n",
     "\n",
-    "boolin(funcao, 1,True,limite_Inf=0, limite_Sup=1)\n"
+    "boolin(funcao, 4,True,limite_Inf=0, limite_Sup=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "qtd particoes 2^12\n",
-      "valor aproximacao = 17.876470075892062\n"
+      "Aproximacao com filosofia fechada\n",
+      "Aproximação com polinomio de grau 1= 17.876470541914223\n",
+      "Numero de particoes = 2^13\n",
+      "\n",
+      "Aproximação com polinomio de grau 2= 17.876470368263835\n",
+      "Numero de particoes = 2^5\n",
+      "\n",
+      "Aproximação com polinomio de grau 3= 17.876470353779972\n",
+      "Numero de particoes = 2^5\n",
+      "\n",
+      "Aproximação com polinomio de grau 4= 17.876470347803945\n",
+      "Numero de particoes = 2^3\n",
+      "\n",
+      "\n",
+      "Aproximacao com filosofia aberta\n",
+      "Aproximação com polinomio de grau 1= 17.876470541914223\n",
+      "Numero de particoes = 2^13\n",
+      "\n",
+      "Aproximação com polinomio de grau 2= 17.876470368263835\n",
+      "Numero de particoes = 2^5\n",
+      "\n",
+      "Aproximação com polinomio de grau 3= 17.876470353779972\n",
+      "Numero de particoes = 2^5\n",
+      "\n",
+      "Aproximação com polinomio de grau 4= 17.876470347803945\n",
+      "Numero de particoes = 2^3\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "boolin(funcao, 1,False,limite_Inf=0, limite_Sup=1)"
+    "print(\"Aproximacao com filosofia fechada\")\n",
+    "for k in range (4):\n",
+    "    i=  boolin(funcao, k+1,True,limite_Inf=0, limite_Sup=1)\n",
+    "    print(\"Aproximação com polinomio de grau {}= {}\".format(k+1,i[1]))\n",
+    "    print(\"Numero de particoes = 2^{}\\n\".format(i[0]))\n",
+    "\n",
+    "print(\"\")\n",
+    "print(\"Aproximacao com filosofia aberta\")\n",
+    "for j in range (4):\n",
+    "    i =  boolin(funcao, j+1,True,limite_Inf=0, limite_Sup=1)\n",
+    "    print(\"Aproximação com polinomio de grau {}= {}\".format(j+1,i[1]))\n",
+    "    print(\"Numero de particoes = 2^{}\\n\".format(i[0]))\n",
+    "\n",
+    "    "
    ]
   }
  ],
