--- a/T16/Euler Implicio e Explicito - Equipe 14(Daniel e Ubiratan).ipynb
+++ b/T16/Euler Implicio e Explicito - Equipe 14(Daniel e Ubiratan).ipynb
@@ -9,8 +9,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: terminaltables in c:\\users\\daniel\\miniconda3\\envs\\teste\\lib\\site-packages (3.1.0)\n",
-      "Requirement already satisfied: colorclass in c:\\users\\daniel\\miniconda3\\envs\\teste\\lib\\site-packages (2.2.0)\n"
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: terminaltables in /home/ubiratan/.local/lib/python3.8/site-packages (3.1.0)\n",
+      "\u001b[33mWARNING: You are using pip version 20.2.1; however, version 20.2.2 is available.\n",
+      "You should consider upgrading via the '/usr/bin/python -m pip install --upgrade pip' command.\u001b[0m\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: colorclass in /home/ubiratan/.local/lib/python3.8/site-packages (2.2.0)\n",
+      "\u001b[33mWARNING: You are using pip version 20.2.1; however, version 20.2.2 is available.\n",
+      "You should consider upgrading via the '/usr/bin/python -m pip install --upgrade pip' command.\u001b[0m\n"
      ]
     }
    ],
@@ -173,45 +179,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "┌ dt = 0.1────┬───────────────┬─────────────────────┬─────────────────────┬──────────────┬──────────────────┬─────────────┐\n",
-      "│             │ \u001b[96mAltura Maxima\u001b[39m │ \u001b[96mVelo. Altura Maxima\u001b[39m │ \u001b[92mTempo Altura Maxima\u001b[39m │ \u001b[91mAltura Queda\u001b[39m │ \u001b[91mVelocidade Queda\u001b[39m │ \u001b[92mTempo Queda\u001b[39m │\n",
-      "├─────────────┼───────────────┼─────────────────────┼─────────────────────┼──────────────┼──────────────────┼─────────────┤\n",
-      "│  Explicito  │   \u001b[96m201.450698\u001b[39m  │      \u001b[96m-0.181337\u001b[39m      │ \u001b[92m0.500000\u001b[39m            │ \u001b[91m-3.733000\u001b[39m    │ \u001b[91m-48.533375\u001b[39m       │ \u001b[92m7.900000\u001b[39m    │\n",
-      "├─────────────┼───────────────┼─────────────────────┼─────────────────────┼──────────────┼──────────────────┼─────────────┤\n",
-      "│  Implicito  │   \u001b[96m200.963493\u001b[39m  │       \u001b[96m0.879563\u001b[39m      │ \u001b[92m0.400000\u001b[39m            │ \u001b[91m-2.045581\u001b[39m    │ \u001b[91m-47.744302\u001b[39m       │ \u001b[92m7.800000\u001b[39m    │\n",
-      "├─────────────┼───────────────┼─────────────────────┼─────────────────────┼──────────────┼──────────────────┼─────────────┤\n",
-      "│ Valor Exato │   \u001b[96m201.199117\u001b[39m  │      \u001b[96m-0.149890\u001b[39m      │ \u001b[92m0.500000\u001b[39m            │ \u001b[91m-0.490800\u001b[39m    │ \u001b[91m-47.938650\u001b[39m       │ \u001b[92m7.800000\u001b[39m    │\n",
-      "└─────────────┴───────────────┴─────────────────────┴─────────────────────┴──────────────┴──────────────────┴─────────────┘\n",
+      "\u001b(0l\u001b(B dt = 0.1\u001b(0qqqqwqqqqqqqqqqqqqqqwqqqqqqqqqqqqqqqqqqqqqwqqqqqqqqqqqqqqqqqqqqqwqqqqqqqqqqqqqqwqqqqqqqqqqqqqqqqqqwqqqqqqqqqqqqqk\u001b(B\n",
+      "\u001b(0x\u001b(B             \u001b(0x\u001b(B \u001b[96mAltura Maxima\u001b[39m \u001b(0x\u001b(B \u001b[96mVelo. Altura Maxima\u001b[39m \u001b(0x\u001b(B \u001b[92mTempo Altura Maxima\u001b[39m \u001b(0x\u001b(B \u001b[91mAltura Queda\u001b[39m \u001b(0x\u001b(B \u001b[91mVelocidade Queda\u001b[39m \u001b(0x\u001b(B \u001b[92mTempo Queda\u001b[39m \u001b(0x\u001b(B\n",
+      "\u001b(0tqqqqqqqqqqqqqnqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqu\u001b(B\n",
+      "\u001b(0x\u001b(B  Explicito  \u001b(0x\u001b(B   \u001b[96m201.450698\u001b[39m  \u001b(0x\u001b(B      \u001b[96m-0.181337\u001b[39m      \u001b(0x\u001b(B \u001b[92m0.500000\u001b[39m            \u001b(0x\u001b(B \u001b[91m-3.733000\u001b[39m    \u001b(0x\u001b(B \u001b[91m-48.533375\u001b[39m       \u001b(0x\u001b(B \u001b[92m7.900000\u001b[39m    \u001b(0x\u001b(B\n",
+      "\u001b(0tqqqqqqqqqqqqqnqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqu\u001b(B\n",
+      "\u001b(0x\u001b(B  Implicito  \u001b(0x\u001b(B   \u001b[96m200.963493\u001b[39m  \u001b(0x\u001b(B       \u001b[96m0.879563\u001b[39m      \u001b(0x\u001b(B \u001b[92m0.400000\u001b[39m            \u001b(0x\u001b(B \u001b[91m-2.045581\u001b[39m    \u001b(0x\u001b(B \u001b[91m-47.744302\u001b[39m       \u001b(0x\u001b(B \u001b[92m7.800000\u001b[39m    \u001b(0x\u001b(B\n",
+      "\u001b(0tqqqqqqqqqqqqqnqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqu\u001b(B\n",
+      "\u001b(0x\u001b(B Valor Exato \u001b(0x\u001b(B   \u001b[96m201.199117\u001b[39m  \u001b(0x\u001b(B      \u001b[96m-0.149890\u001b[39m      \u001b(0x\u001b(B \u001b[92m0.500000\u001b[39m            \u001b(0x\u001b(B \u001b[91m-0.490800\u001b[39m    \u001b(0x\u001b(B \u001b[91m-47.938650\u001b[39m       \u001b(0x\u001b(B \u001b[92m7.800000\u001b[39m    \u001b(0x\u001b(B\n",
+      "\u001b(0mqqqqqqqqqqqqqvqqqqqqqqqqqqqqqvqqqqqqqqqqqqqqqqqqqqqvqqqqqqqqqqqqqqqqqqqqqvqqqqqqqqqqqqqqvqqqqqqqqqqqqqqqqqqvqqqqqqqqqqqqqj\u001b(B\n",
       "\n",
-      "┌ dt = 0.01───┬───────────────┬─────────────────────┬─────────────────────┬──────────────┬──────────────────┬─────────────┐\n",
-      "│             │ \u001b[96mAltura Maxima\u001b[39m │ \u001b[96mVelo. Altura Maxima\u001b[39m │ \u001b[92mTempo Altura Maxima\u001b[39m │ \u001b[91mAltura Queda\u001b[39m │ \u001b[91mVelocidade Queda\u001b[39m │ \u001b[92mTempo Queda\u001b[39m │\n",
-      "├─────────────┼───────────────┼─────────────────────┼─────────────────────┼──────────────┼──────────────────┼─────────────┤\n",
-      "│  Explicito  │   \u001b[96m201.224622\u001b[39m  │      \u001b[96m-0.053078\u001b[39m      │ \u001b[92m0.490000\u001b[39m            │ \u001b[91m-0.334419\u001b[39m    │ \u001b[91m-47.958198\u001b[39m       │ \u001b[92m7.800000\u001b[39m    │\n",
-      "├─────────────┼───────────────┼─────────────────────┼─────────────────────┼──────────────┼──────────────────┼─────────────┤\n",
-      "│  Implicito  │   \u001b[96m201.176122\u001b[39m  │       \u001b[96m0.052985\u001b[39m      │ \u001b[92m0.480000\u001b[39m            │ \u001b[91m-0.167826\u001b[39m    │ \u001b[91m-47.879022\u001b[39m       │ \u001b[92m7.790000\u001b[39m    │\n",
-      "├─────────────┼───────────────┼─────────────────────┼─────────────────────┼──────────────┼──────────────────┼─────────────┤\n",
-      "│ Valor Exato │   \u001b[96m201.200117\u001b[39m  │       \u001b[96m0.049985\u001b[39m      │ \u001b[92m0.480000\u001b[39m            │ \u001b[91m-0.011614\u001b[39m    │ \u001b[91m-47.898548\u001b[39m       │ \u001b[92m7.790000\u001b[39m    │\n",
-      "└─────────────┴───────────────┴─────────────────────┴─────────────────────┴──────────────┴──────────────────┴─────────────┘\n",
+      "\u001b(0l\u001b(B dt = 0.01\u001b(0qqqwqqqqqqqqqqqqqqqwqqqqqqqqqqqqqqqqqqqqqwqqqqqqqqqqqqqqqqqqqqqwqqqqqqqqqqqqqqwqqqqqqqqqqqqqqqqqqwqqqqqqqqqqqqqk\u001b(B\n",
+      "\u001b(0x\u001b(B             \u001b(0x\u001b(B \u001b[96mAltura Maxima\u001b[39m \u001b(0x\u001b(B \u001b[96mVelo. Altura Maxima\u001b[39m \u001b(0x\u001b(B \u001b[92mTempo Altura Maxima\u001b[39m \u001b(0x\u001b(B \u001b[91mAltura Queda\u001b[39m \u001b(0x\u001b(B \u001b[91mVelocidade Queda\u001b[39m \u001b(0x\u001b(B \u001b[92mTempo Queda\u001b[39m \u001b(0x\u001b(B\n",
+      "\u001b(0tqqqqqqqqqqqqqnqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqu\u001b(B\n",
+      "\u001b(0x\u001b(B  Explicito  \u001b(0x\u001b(B   \u001b[96m201.224622\u001b[39m  \u001b(0x\u001b(B      \u001b[96m-0.053078\u001b[39m      \u001b(0x\u001b(B \u001b[92m0.490000\u001b[39m            \u001b(0x\u001b(B \u001b[91m-0.334419\u001b[39m    \u001b(0x\u001b(B \u001b[91m-47.958198\u001b[39m       \u001b(0x\u001b(B \u001b[92m7.800000\u001b[39m    \u001b(0x\u001b(B\n",
+      "\u001b(0tqqqqqqqqqqqqqnqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqu\u001b(B\n",
+      "\u001b(0x\u001b(B  Implicito  \u001b(0x\u001b(B   \u001b[96m201.176122\u001b[39m  \u001b(0x\u001b(B       \u001b[96m0.052985\u001b[39m      \u001b(0x\u001b(B \u001b[92m0.480000\u001b[39m            \u001b(0x\u001b(B \u001b[91m-0.167826\u001b[39m    \u001b(0x\u001b(B \u001b[91m-47.879022\u001b[39m       \u001b(0x\u001b(B \u001b[92m7.790000\u001b[39m    \u001b(0x\u001b(B\n",
+      "\u001b(0tqqqqqqqqqqqqqnqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqu\u001b(B\n",
+      "\u001b(0x\u001b(B Valor Exato \u001b(0x\u001b(B   \u001b[96m201.200117\u001b[39m  \u001b(0x\u001b(B       \u001b[96m0.049985\u001b[39m      \u001b(0x\u001b(B \u001b[92m0.480000\u001b[39m            \u001b(0x\u001b(B \u001b[91m-0.011614\u001b[39m    \u001b(0x\u001b(B \u001b[91m-47.898548\u001b[39m       \u001b(0x\u001b(B \u001b[92m7.790000\u001b[39m    \u001b(0x\u001b(B\n",
+      "\u001b(0mqqqqqqqqqqqqqvqqqqqqqqqqqqqqqvqqqqqqqqqqqqqqqqqqqqqvqqqqqqqqqqqqqqqqqqqqqvqqqqqqqqqqqqqqvqqqqqqqqqqqqqqqqqqvqqqqqqqqqqqqqj\u001b(B\n",
       "\n",
-      "┌ dt = 0.001──┬───────────────┬─────────────────────┬─────────────────────┬──────────────┬──────────────────┬─────────────┐\n",
-      "│             │ \u001b[96mAltura Maxima\u001b[39m │ \u001b[96mVelo. Altura Maxima\u001b[39m │ \u001b[92mTempo Altura Maxima\u001b[39m │ \u001b[91mAltura Queda\u001b[39m │ \u001b[91mVelocidade Queda\u001b[39m │ \u001b[92mTempo Queda\u001b[39m │\n",
-      "├─────────────┼───────────────┼─────────────────────┼─────────────────────┼──────────────┼──────────────────┼─────────────┤\n",
-      "│  Explicito  │   \u001b[96m201.202667\u001b[39m  │      \u001b[96m-0.000333\u001b[39m      │ \u001b[92m0.485000\u001b[39m            │ \u001b[91m-0.043885\u001b[39m    │ \u001b[91m-47.904514\u001b[39m       │ \u001b[92m7.791000\u001b[39m    │\n",
-      "├─────────────┼───────────────┼─────────────────────┼─────────────────────┼──────────────┼──────────────────┼─────────────┤\n",
-      "│  Implicito  │   \u001b[96m201.197817\u001b[39m  │       \u001b[96m0.000273\u001b[39m      │ \u001b[92m0.485000\u001b[39m            │ \u001b[91m-0.027243\u001b[39m    │ \u001b[91m-47.896595\u001b[39m       │ \u001b[92m7.790000\u001b[39m    │\n",
-      "├─────────────┼───────────────┼─────────────────────┼─────────────────────┼──────────────┼──────────────────┼─────────────┤\n",
-      "│ Valor Exato │   \u001b[96m201.200242\u001b[39m  │      \u001b[96m-0.000030\u001b[39m      │ \u001b[92m0.485000\u001b[39m            │ \u001b[91m-0.011614\u001b[39m    │ \u001b[91m-47.898548\u001b[39m       │ \u001b[92m7.790000\u001b[39m    │\n",
-      "└─────────────┴───────────────┴─────────────────────┴─────────────────────┴──────────────┴──────────────────┴─────────────┘\n",
+      "\u001b(0l\u001b(B dt = 0.001\u001b(0qqwqqqqqqqqqqqqqqqwqqqqqqqqqqqqqqqqqqqqqwqqqqqqqqqqqqqqqqqqqqqwqqqqqqqqqqqqqqwqqqqqqqqqqqqqqqqqqwqqqqqqqqqqqqqk\u001b(B\n",
+      "\u001b(0x\u001b(B             \u001b(0x\u001b(B \u001b[96mAltura Maxima\u001b[39m \u001b(0x\u001b(B \u001b[96mVelo. Altura Maxima\u001b[39m \u001b(0x\u001b(B \u001b[92mTempo Altura Maxima\u001b[39m \u001b(0x\u001b(B \u001b[91mAltura Queda\u001b[39m \u001b(0x\u001b(B \u001b[91mVelocidade Queda\u001b[39m \u001b(0x\u001b(B \u001b[92mTempo Queda\u001b[39m \u001b(0x\u001b(B\n",
+      "\u001b(0tqqqqqqqqqqqqqnqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqu\u001b(B\n",
+      "\u001b(0x\u001b(B  Explicito  \u001b(0x\u001b(B   \u001b[96m201.202667\u001b[39m  \u001b(0x\u001b(B      \u001b[96m-0.000333\u001b[39m      \u001b(0x\u001b(B \u001b[92m0.485000\u001b[39m            \u001b(0x\u001b(B \u001b[91m-0.043885\u001b[39m    \u001b(0x\u001b(B \u001b[91m-47.904514\u001b[39m       \u001b(0x\u001b(B \u001b[92m7.791000\u001b[39m    \u001b(0x\u001b(B\n",
+      "\u001b(0tqqqqqqqqqqqqqnqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqu\u001b(B\n",
+      "\u001b(0x\u001b(B  Implicito  \u001b(0x\u001b(B   \u001b[96m201.197817\u001b[39m  \u001b(0x\u001b(B       \u001b[96m0.000273\u001b[39m      \u001b(0x\u001b(B \u001b[92m0.485000\u001b[39m            \u001b(0x\u001b(B \u001b[91m-0.027243\u001b[39m    \u001b(0x\u001b(B \u001b[91m-47.896595\u001b[39m       \u001b(0x\u001b(B \u001b[92m7.790000\u001b[39m    \u001b(0x\u001b(B\n",
+      "\u001b(0tqqqqqqqqqqqqqnqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqu\u001b(B\n",
+      "\u001b(0x\u001b(B Valor Exato \u001b(0x\u001b(B   \u001b[96m201.200242\u001b[39m  \u001b(0x\u001b(B      \u001b[96m-0.000030\u001b[39m      \u001b(0x\u001b(B \u001b[92m0.485000\u001b[39m            \u001b(0x\u001b(B \u001b[91m-0.011614\u001b[39m    \u001b(0x\u001b(B \u001b[91m-47.898548\u001b[39m       \u001b(0x\u001b(B \u001b[92m7.790000\u001b[39m    \u001b(0x\u001b(B\n",
+      "\u001b(0mqqqqqqqqqqqqqvqqqqqqqqqqqqqqqvqqqqqqqqqqqqqqqqqqqqqvqqqqqqqqqqqqqqqqqqqqqvqqqqqqqqqqqqqqvqqqqqqqqqqqqqqqqqqvqqqqqqqqqqqqqj\u001b(B\n",
       "\n",
-      "┌ dt = 0.0001─┬───────────────┬─────────────────────┬─────────────────────┬──────────────┬──────────────────┬─────────────┐\n",
-      "│             │ \u001b[96mAltura Maxima\u001b[39m │ \u001b[96mVelo. Altura Maxima\u001b[39m │ \u001b[92mTempo Altura Maxima\u001b[39m │ \u001b[91mAltura Queda\u001b[39m │ \u001b[91mVelocidade Queda\u001b[39m │ \u001b[92mTempo Queda\u001b[39m │\n",
-      "├─────────────┼───────────────┼─────────────────────┼─────────────────────┼──────────────┼──────────────────┼─────────────┤\n",
-      "│  Explicito  │   \u001b[96m201.200485\u001b[39m  │      \u001b[96m-0.000061\u001b[39m      │ \u001b[92m0.485000\u001b[39m            │ \u001b[91m-0.000472\u001b[39m    │ \u001b[91m-47.897941\u001b[39m       │ \u001b[92m7.789800\u001b[39m    │\n",
-      "├─────────────┼───────────────┼─────────────────────┼─────────────────────┼──────────────┼──────────────────┼─────────────┤\n",
-      "│  Implicito  │   \u001b[96m201.200000\u001b[39m  │       \u001b[96m0.000000\u001b[39m      │ \u001b[92m0.485000\u001b[39m            │ \u001b[91m-0.003598\u001b[39m    │ \u001b[91m-47.897550\u001b[39m       │ \u001b[92m7.789800\u001b[39m    │\n",
-      "├─────────────┼───────────────┼─────────────────────┼─────────────────────┼──────────────┼──────────────────┼─────────────┤\n",
-      "│ Valor Exato │   \u001b[96m201.200242\u001b[39m  │      \u001b[96m-0.000030\u001b[39m      │ \u001b[92m0.485000\u001b[39m            │ \u001b[91m-0.002035\u001b[39m    │ \u001b[91m-47.897746\u001b[39m       │ \u001b[92m7.789800\u001b[39m    │\n",
-      "└─────────────┴───────────────┴─────────────────────┴─────────────────────┴──────────────┴──────────────────┴─────────────┘\n",
+      "\u001b(0l\u001b(B dt = 0.0001\u001b(0qwqqqqqqqqqqqqqqqwqqqqqqqqqqqqqqqqqqqqqwqqqqqqqqqqqqqqqqqqqqqwqqqqqqqqqqqqqqwqqqqqqqqqqqqqqqqqqwqqqqqqqqqqqqqk\u001b(B\n",
+      "\u001b(0x\u001b(B             \u001b(0x\u001b(B \u001b[96mAltura Maxima\u001b[39m \u001b(0x\u001b(B \u001b[96mVelo. Altura Maxima\u001b[39m \u001b(0x\u001b(B \u001b[92mTempo Altura Maxima\u001b[39m \u001b(0x\u001b(B \u001b[91mAltura Queda\u001b[39m \u001b(0x\u001b(B \u001b[91mVelocidade Queda\u001b[39m \u001b(0x\u001b(B \u001b[92mTempo Queda\u001b[39m \u001b(0x\u001b(B\n",
+      "\u001b(0tqqqqqqqqqqqqqnqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqu\u001b(B\n",
+      "\u001b(0x\u001b(B  Explicito  \u001b(0x\u001b(B   \u001b[96m201.200485\u001b[39m  \u001b(0x\u001b(B      \u001b[96m-0.000061\u001b[39m      \u001b(0x\u001b(B \u001b[92m0.485000\u001b[39m            \u001b(0x\u001b(B \u001b[91m-0.000472\u001b[39m    \u001b(0x\u001b(B \u001b[91m-47.897941\u001b[39m       \u001b(0x\u001b(B \u001b[92m7.789800\u001b[39m    \u001b(0x\u001b(B\n",
+      "\u001b(0tqqqqqqqqqqqqqnqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqu\u001b(B\n",
+      "\u001b(0x\u001b(B  Implicito  \u001b(0x\u001b(B   \u001b[96m201.200000\u001b[39m  \u001b(0x\u001b(B       \u001b[96m0.000000\u001b[39m      \u001b(0x\u001b(B \u001b[92m0.485000\u001b[39m            \u001b(0x\u001b(B \u001b[91m-0.003598\u001b[39m    \u001b(0x\u001b(B \u001b[91m-47.897550\u001b[39m       \u001b(0x\u001b(B \u001b[92m7.789800\u001b[39m    \u001b(0x\u001b(B\n",
+      "\u001b(0tqqqqqqqqqqqqqnqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqqnqqqqqqqqqqqqqqqqqqnqqqqqqqqqqqqqu\u001b(B\n",
+      "\u001b(0x\u001b(B Valor Exato \u001b(0x\u001b(B   \u001b[96m201.200242\u001b[39m  \u001b(0x\u001b(B      \u001b[96m-0.000030\u001b[39m      \u001b(0x\u001b(B \u001b[92m0.485000\u001b[39m            \u001b(0x\u001b(B \u001b[91m-0.002035\u001b[39m    \u001b(0x\u001b(B \u001b[91m-47.897746\u001b[39m       \u001b(0x\u001b(B \u001b[92m7.789800\u001b[39m    \u001b(0x\u001b(B\n",
+      "\u001b(0mqqqqqqqqqqqqqvqqqqqqqqqqqqqqqvqqqqqqqqqqqqqqqqqqqqqvqqqqqqqqqqqqqqqqqqqqqvqqqqqqqqqqqqqqvqqqqqqqqqqqqqqqqqqvqqqqqqqqqqqqqj\u001b(B\n",
       "\n"
      ]
     }
@@ -224,9 +230,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.3 64-bit",
    "language": "python",
-   "name": "python3"
+   "name": "python38364bitc7d5276b71204dfa941e18682dec14a3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -238,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
